argo-cd-dev/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: envoy-gateway
spec:
  parentRefs:
    - name: eg-default
      namespace: envoy-gateway
  hostnames:
    - "argocd.dev.lightup.tw"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          namespace: argo-cd
          name: argo-cd-argocd-server
          port: 443
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
